# trend-buddy

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  Readme.md  TODO.md  bot.py  database.md  design.puml  docker-compose.yml  go.mod  go.sum  requirements.txt  workflow.md
.github/workflows/: django.yml  go-test.yml  release.yml
analysis/: urls.py  views.py
archive/: .gitignore  Readme.md  pyproject.toml
archive/.github/workflows/: django.yml
archive/buddy/: requirements.txt  structure.md
archive/buddy/analysis/: urls.py  views.py
archive/buddy/api/: views.py
archive/buddy/api/data/: views.py
archive/buddy/buddy/: asgi.py
authentication/: views.py
bot/: Data.py  Indicator.py  Order.py  admin.py  apps.py  bot.py  bot_class.py  jobs.py  models.py  signals.py  urls.py  views.py
buddy/: .dockerignore  Readme.md  asgi.py  docker-compose.yml  manage.py  requirements.txt  settings.py  structure.md  urls.py  workflow.md  wsgi.py
buddy/analysis/: statergy.py  urls.py  views.py
buddy/api/: urls.py
buddy/bot/: jobs.py  views.py
buddy/buddy/: settings.py  urls.py  wsgi.py
buddy/data/: admin.py  models.py  populate.py  urls.py  views.py
buddy/frontend/: urls.py
buddy/templates/: base.html  home.html  index.html
cmd/api/: main.go
cmd/web/: base.templ  hello.templ
data/: admin.py  models.py  populate.py  serializers.py  test.py  urls.py  views.py
data/migrations/: 0001_initial.py  (+1 more)
templates/: base.html  index.html
training-ground/: OrderExecuter.py  requirements.txt
ui/: forms.py  urls.py  utils.py  views.py
(+46 files in other folders)
