[project]
name = "trend-buddy"
version = "0.1.0"
description = "An OpenSource Trading bot"
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "alpha-vantage>=3.0.0",
    "beautifulsoup4>=4.12.3",
    "django>=5.1.1",
    "djangorestframework>=3.15.2",
    "pandas>=2.2.3",
    "python-decouple>=3.8",
    "ta-lib>=0.4.32",
    "vectorbt>=0.26.2",
    "yfinance>=0.2.44",
]
